--- a/package.json
+++ b/package.json
@@ -37,17 +37,17 @@
     "gh-pages": "2.1.1",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "postcss-loader": "3.0.0",
     "sass-loader": "7.2.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.7",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "3.11.0"
   },
   "engineStrict": true,
   "engines": {
-    "node": "~14.18.3",
-    "npm": "~6.14.15"
+    "node": "14.18.3",
+    "npm": "6.14.15"
   },
   "postcss": {
     "plugins": {
