--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-last-block",
+  "name": "Web-Core-1.6",
   "version": "1.0.0",
   "description": "",
   "keywords": [
@@ -53,5 +53,9 @@
     "plugins": {
       "autoprefixer": {}
     }
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "swiper": "^8.4.6"
   }
 }
